FIX: google chrome whitespaces

--- a/htck/app/styles/main.scss
+++ b/htck/app/styles/main.scss
@@ -12,6 +12,10 @@ $fa-font-path: "../lib/font-awesome/fonts/";
     user-select: none;
 }
 
+text{
+	white-space: pre;
+}
+
 .gh-forkme {
 	width:100px;
 	height:100px;
